ConfigMap.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod1
  name: pod1
spec:
  volumes:
  - name: cfm-vol ## any name 
    configMap:
        name: birke ## config map name 
  containers:
  - image: nginx:alpine
    name: pod1
    volumeMounts:
    - name: cfm-vol
      mountPath: /etc/birke
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
