pod-pv-user.yaml

apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: default
spec:
  containers:
    - name: test
      image: nginx
      volumeMounts:   # same 
        - name: config
          mountPath: /usr/share/nginx/html
          #subPath: html   
        # there can be multpile mounts, subpath is needed then 
        #- name: config
        #  mountPath: /etc/nginx/nginx.conf
        #  subPath: nginx.conf
  volumes:
    - name: config
      persistentVolumeClaim:
        claimName: pv-claim
