pod-security.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context-demo-4
	namespace: my-ns
spec:
  serviceAccountName: k8s-sa   # service account
  securityContext: # for any container in the pod 
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000   # supplementary group
  containers:
  - name: sec-ctx-demo
    image: busybox:1.28
    command: [ "sh", "-c", "sleep 1h" ]
    securityContext:   # for this container only, can also have runasuser/runasgroup
      privileged: false
      allowPrivilegeEscalation: false
      capabilities:  # SElinux capabilities
        add: ["NET_ADMIN", "SYS_TIME"]
