pod-with-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: disktype
            operator: In
            values:
            - ssd            
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: disktype
            operator: In
            values:
            - ssd
  tolerations: # kubectl taint nodes node1 key1=value1:NoSchedule
  - key: "key1"
    operator: "Equal"
    value: "value1"
    effect: "NoSchedule"  
  - key: "example-key"
    operator: "Exists"
    effect: "NoSchedule"  
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
