pod-with-volumes.yaml

apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: default
spec:
  containers:
    - name: test
      image: nginx
      volumeMounts:   # same 
        - name: config
          mountPath: /usr/share/nginx/html
          #subPath: html   
        # there can be multpile mounts, subpath is needed then 
        #- name: config
        #  mountPath: /etc/nginx/nginx.conf
        #  subPath: nginx.conf
  volumes:
    - name: config
      persistentVolumeClaim:
        claimName: pv-claim
    - name: shared-data
      emptyDir: #{}
        sizeLimit: 500Mi
    - name: host_dir
      hostPath:
        path: /data/foo # local host path
        type: Directory # DirectoryOrCreate, FileOrCreate, File
